force-app/src/objects/c2g__codaGeneralLedgerAccount__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpgeneralledgeraccount</customHelpPage>
    <description>General ledger account represent different categories of income/expenses/assets/liabilities and reserves.</description>
    <fields>
        <fullName>c2g__AdjustOperatingActivities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowRevaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Revaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceSheet1__c</fullName>
        <label>Balance Sheet 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Revenue and Expenditure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__BalanceSheet2__c</fullName>
        <label>Balance Sheet 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>c2g__BalanceSheet1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gross Profit</fullName>
                </value>
                <value>
                    <fullName>Overhead</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Exchange Rate Gains and Losses</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                </value>
                <value>
                    <fullName>Sundry expenses</fullName>
                </value>
                <value>
                    <fullName>Bad Debt Write Off/Recover</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__BalanceSheet3__c</fullName>
        <label>Balance Sheet 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>c2g__BalanceSheet2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cost of Sales</fullName>
                </value>
                <value>
                    <fullName>Other Staff Cost</fullName>
                </value>
                <value>
                    <fullName>Rent and Utilities</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>IT and IT systems</fullName>
                </value>
                <value>
                    <fullName>Travel and Accommodation</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>Conferences</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Legal and Professional Fees</fullName>
                </value>
                <value>
                    <fullName>Insurances</fullName>
                </value>
                <value>
                    <fullName>General Office Cost</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Bank and CC Charges</fullName>
                </value>
                <value>
                    <fullName>Net Turnover</fullName>
                </value>
                <value>
                    <fullName>General Admin Salaries</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CashFlowCategory__c</fullName>
        <description>Cash Flow Category</description>
        <label>Cash Flow Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operating Activities</fullName>
                </value>
                <value>
                    <fullName>Investing Activities</fullName>
                </value>
                <value>
                    <fullName>Financing Activities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CashFlowLineSummary__c</fullName>
        <label>Cash Flow Line Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(Gain) / Loss on Foreign Exchange</fullName>
                </value>
                <value>
                    <fullName>(Gain) / Loss on Investment Disposals</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Inventory</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Other Current Assets</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Receivables</fullName>
                </value>
                <value>
                    <fullName>Deferred Revenue</fullName>
                </value>
                <value>
                    <fullName>Depreciation &amp; Amortization</fullName>
                </value>
                <value>
                    <fullName>Dividends on Common Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends on Preference Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends Received</fullName>
                </value>
                <value>
                    <fullName>Impairment</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Common Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Employment Creditors</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Long Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Other Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Payables</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Preference Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Short Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Purchase of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Purchase of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Sale of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Sales Proceeds from Disposal of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Unrealized (Gain) / Loss on Foreign Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ChartOfAccountsStructure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chart of Accounts Structure</label>
        <referenceTo>c2g__ChartOfAccountsStructure__c</referenceTo>
        <relationshipLabel>General Ledger Accounts</relationshipLabel>
        <relationshipName>GeneralLedgerAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DateFrom__c</fullName>
        <description>If the period start and end date of the document match or are within the dates mentioned in the Date From and Date To fields in the Posting Effective Dates section of the GLA, then that GLA is available to be assigned to that document.</description>
        <inlineHelpText>If the period start date and end date of the document match or are within the dates mentioned in the Date From and Date To fields, then this GLA can be assigned to that document.</inlineHelpText>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DateTo__c</fullName>
        <description>If the period start and end date of the document match or are within the dates mentioned in the Date From and Date To fields in the Posting Effective Dates section of the GLA, then that GLA is available to be assigned to that document.</description>
        <inlineHelpText>If the period start date and end date of the document match or are within the dates mentioned in the Date From and Date To fields, then this GLA can be assigned to that document.</inlineHelpText>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GLAGroup__c</fullName>
        <label>GLA Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyElimination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intercompany Elimination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LocalBalanceSheet1__c</fullName>
        <label>Local Balance Sheet 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LocalBalanceSheet2__c</fullName>
        <label>Local Balance Sheet 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LocalBalanceSheet3__c</fullName>
        <label>Local Balance Sheet 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LocalBalanceSheetOrder1__c</fullName>
        <label>Local Balance Sheet Order 1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LocalBalanceSheetOrder2__c</fullName>
        <label>Local Balance Sheet Order 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LocalBalanceSheetOrder3__c</fullName>
        <label>Local Balance Sheet Order 3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LocalTrialBalance1__c</fullName>
        <label>Local Trial Balance 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LocalTrialBalance2__c</fullName>
        <label>Local Trial Balance 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LocalTrialBalance3__c</fullName>
        <label>Local Trial Balance 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Localization__c</fullName>
        <description>Stores the ISO country code of the localization. The field is populated by the localization that exists in the GLA. This field is hidden and read only.</description>
        <label>Localization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PostingAllowed__c</fullName>
        <description>By default, this field is set to “All Dates” which allows this GLA to be assigned to any document irrespective of its period. You can set it to “Select Dates” and specify the dates in the Date From and Date To fields. This makes the GLA available for posting only those documents that have the period start and end dates within the dates mentioned here.</description>
        <inlineHelpText>The “All Dates” option allows you to associate this GLA with documents assigned to any period. The “Select Dates” option allows you to specify the dates in the Date From and Date To fields. This makes the GLA available for posting only those documents that have the period start and end dates within the dates mentioned here.</inlineHelpText>
        <label>Allow Posting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Dates</fullName>
                    <default>true</default>
                    <label>All Dates</label>
                </value>
                <value>
                    <fullName>Select Dates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ReportingCode__c</fullName>
        <label>Reporting Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__StandardAccountID__c</fullName>
        <label>Standard Account ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TrialBalance1__c</fullName>
        <label>Trial Balance 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Operating Expenses</fullName>
                </value>
                <value>
                    <fullName>Gross Operating Result</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Equity and Liabilities</fullName>
                </value>
                <value>
                    <fullName>NOW subsidy</fullName>
                </value>
                <value>
                    <fullName>Value changes</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Other interest and similar income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TrialBalance2__c</fullName>
        <label>Trial Balance 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>c2g__TrialBalance1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Gross Profit</fullName>
                </value>
                <value>
                    <fullName>Operating Expenses</fullName>
                </value>
                <value>
                    <fullName>Shareholders Funds</fullName>
                </value>
                <value>
                    <fullName>Financial Income &amp; Expense</fullName>
                </value>
                <value>
                    <fullName>Interest and Tax</fullName>
                </value>
                <value>
                    <fullName>Amortization and Depreciation</fullName>
                </value>
                <value>
                    <fullName>Net Turnover</fullName>
                </value>
                <value>
                    <fullName>Cost of Sales</fullName>
                </value>
                <value>
                    <fullName>Cash at bank and in hand</fullName>
                </value>
                <value>
                    <fullName>Receivables</fullName>
                </value>
                <value>
                    <fullName>Financial fixed assets</fullName>
                </value>
                <value>
                    <fullName>Net Assets</fullName>
                </value>
                <value>
                    <fullName>Other operating expenses</fullName>
                </value>
                <value>
                    <fullName>Value changes in receivable and securities</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Salaries and wages</fullName>
                </value>
                <value>
                    <fullName>Social security premiums and pensions cost</fullName>
                </value>
                <value>
                    <fullName>Other interest and similar income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TrialBalance3__c</fullName>
        <label>Trial Balance 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>c2g__TrialBalance2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A Salaries and Wages</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Amortization and Depreciation</fullName>
                </value>
                <value>
                    <fullName>Bank and Cash</fullName>
                </value>
                <value>
                    <fullName>Capital and Reserves</fullName>
                </value>
                <value>
                    <fullName>Cost of Sales</fullName>
                </value>
                <value>
                    <fullName>Financial Fixed Asset</fullName>
                </value>
                <value>
                    <fullName>Value Changes Securities</fullName>
                </value>
                <value>
                    <fullName>Intangible Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Net Turnover</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Other Liabilities, Accruals and Deferred Inome</fullName>
                </value>
                <value>
                    <fullName>Other Operating Expenses</fullName>
                </value>
                <value>
                    <fullName>Receivables</fullName>
                </value>
                <value>
                    <fullName>Social Security Premiums and Pension Costs</fullName>
                </value>
                <value>
                    <fullName>Tangible Fixed assets</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Taxes and Social Security Premiums</fullName>
                </value>
                <value>
                    <fullName>Other Personnel Expenses</fullName>
                </value>
                <value>
                    <fullName>General Expenses</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Investment Income</fullName>
                </value>
                <value>
                    <fullName>Dutch Government Support</fullName>
                </value>
                <value>
                    <fullName>Other Income and Expenses</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Premises Expenses</fullName>
                </value>
                <value>
                    <fullName>Revenue Supporting Expenses</fullName>
                </value>
                <value>
                    <fullName>Office Expenses</fullName>
                </value>
                <value>
                    <fullName>Cash at bank and in hand</fullName>
                </value>
                <value>
                    <fullName>Other receivables and accrued income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Retained Earnings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnrealizedGainLossGLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unrealized Gains/Losses GLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__hasLocalization__c</fullName>
        <formula>!ISPICKVAL(c2g__Localization__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has a localization value</label>
        <type>Checkbox</type>
    </fields>
    <label>General Ledger Account</label>
    <listViews>
        <fullName>GL_incl_TB</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__ReportingCode__c</columns>
        <columns>c2g__AllowRevaluation__c</columns>
        <columns>c2g__TrialBalance1__c</columns>
        <columns>c2g__TrialBalance2__c</columns>
        <columns>c2g__TrialBalance3__c</columns>
        <columns>c2g__TrialBalance4__c</columns>
        <filterScope>Everything</filterScope>
        <label>GL incl TB</label>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__TrialBalance1__c</columns>
        <columns>c2g__TrialBalance2__c</columns>
        <columns>c2g__TrialBalance3__c</columns>
        <columns>c2g__TrialBalance4__c</columns>
        <columns>c2g__BalanceSheet1__c</columns>
        <columns>c2g__BalanceSheet2__c</columns>
        <columns>c2g__BalanceSheet3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>c2g__GeneralLedgerAccountsinclHierarchy</fullName>
        <columns>NAME</columns>
        <columns>c2g__ReportingCode__c</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__TrialBalance1__c</columns>
        <columns>c2g__TrialBalance2__c</columns>
        <columns>c2g__TrialBalance3__c</columns>
        <columns>c2g__TrialBalance4__c</columns>
        <columns>c2g__BalanceSheet1__c</columns>
        <columns>c2g__BalanceSheet2__c</columns>
        <columns>c2g__BalanceSheet3__c</columns>
        <filterScope>Everything</filterScope>
        <label>General Ledger Accounts with Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>c2g__IntercompanyEliminationGLAs</fullName>
        <columns>NAME</columns>
        <columns>c2g__IntercompanyElimination__c</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__ChartOfAccountsStructure__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__IntercompanyElimination__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Intercompany Elimination GLAs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Ledger Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>